--- a/BigSchool_VoDucLoi/Views/Home/Index.cshtml
+++ b/BigSchool_VoDucLoi/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@{
+﻿@model IEnumerable<BigSchool_VoDucLoi.Models.Course>
+@{
     ViewBag.Title = "Home Page";
 }
+
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
@@ -9,23 +11,39 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+        <ul>
+            @foreach(var course in Model)
+            {
+                <li>
+                    @course.DateTime- @course.Lecturer.Name
+                </li>
+            }
+        </ul>
+    <ul class="course">
+        @foreach (var cource in Model)
+        {
+            <li>
+                <div class="date">
+                    <div class="month">
+                        @cource.DateTime.ToString("MM")
+
+                    </div>
+                    <div class="day">
+                        @cource.DateTime.ToString("dd")
+
+                    </div>
+
+                </div>
+                <div class="details">
+                    <span class="lecturer">
+                        @cource.Lecturer.Name
+                    </span>
+                    <span class="category">
+                        @cource.Category.Name
+                    </span>
+
+                </div>
+            </li>
+        }
+    </ul>
 </div>
