--- a/BigSchool_VoDucLoi/Views/Shared/_LoginPartial.cshtml
+++ b/BigSchool_VoDucLoi/Views/Shared/_LoginPartial.cshtml
@@ -6,12 +6,25 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
+
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="#">Course I'm Going</a>
+                </li>
+                <li>
+                    <a href="#">Lecturn I'm Flowing</a>
+                </li>
+                <li role="separator" class="divider">
+
+                </li>
+                <li><a href="javascrip:document.getElementById('logoutForm').submit()"> LogOff</a> </li>
+            </ul>
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
+
 }
 else
 {
@@ -20,3 +33,4 @@ else
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
+
