--- a/BigSchool_VoDucLoi/Views/Home/Index.cshtml
+++ b/BigSchool_VoDucLoi/Views/Home/Index.cshtml
@@ -37,13 +37,46 @@
                 <div class="details">
                     <span class="lecturer">
                         @cource.Lecturer.Name
+                        <button class="btn btn-danger btn-sm js-toggle-follow" data-user-id="@cource.LecturerId">Follow</button>
                     </span>
                     <span class="category">
                         @cource.Category.Name
                     </span>
-
+                <button data-course-id="@cource.Id" class="btn btn-default btn-sm js-toggle-attendance " >Going?</button>
                 </div>
             </li>
         }
     </ul>
+
+    @section scripts {
+            <script>
+                $(document).ready(function () {
+                    $("js-toggle-attendance").click(function (e) {
+                        var button = $(e.target);
+                        $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+                            .done(function () {
+                                button
+                                    .removeClass("btn-default")
+                                    .addClass("btn-info")
+                                    .text("Going?");
+                            })
+                        .fail(function () {
+                            alert("Something failed!");
+                        });
+                    });
+
+                    $(".js-toggle-follow").click(function (e) {
+                        var button = $(e.target);
+                        $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                        .done(function () {
+                            button.text("Following");
+                        })
+                        .fail(function () {
+                            alert("Something dailed")
+                        });
+                    });
+
+                });
+            </script>
+        }
 </div>
